add suipport to springboot3